fix text font size bug

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,8 @@
     fillColor: 'rgba(100,0,0,.1)',
     linkBorderColor: '#0f0',
     linkFillColor: 'rgba(0,255,0,0.3)',
-    lineColor: '#333'
+    lineColor: '#333',
+    fontSize: 14
   });
   linkMap.draw(elements);
   console.log('draw finish.');
