add special link color

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,7 @@
       y: 450,
       width: 100,
       height: 100,
+      lineColor: '#00F',
       links: [
         {
           x: 30,
@@ -210,6 +211,7 @@
       y: 450,
       width: 100,
       height: 100,
+      lineColor: '#0F0',
       links: [
         {
           x: 30,
