--- a/src/index.html
+++ b/src/index.html
@@ -33,219 +33,219 @@
 <canvas id="can" width="600" height="600"></canvas>
 <script>
   var context = document.getElementById('can').getContext('2d');
-  //    var elements = [
-  //      {
-  //        id: 0,
-  //        x: 0,
-  //        y: 0,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 1
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 2
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 2
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 2
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 2
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 1,
-  //        x: 150,
-  //        y: 0,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 4
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 50,
-  //            target: 7
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 2,
-  //        x: 300,
-  //        y: 0,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 0
-  //          },
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 50,
-  //            target: 1
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 3,
-  //        x: 0,
-  //        y: 150,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 11
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 4,
-  //        x: 150,
-  //        y: 150,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 50,
-  //            y: 50,
-  //            width: 30,
-  //            height: 30,
-  //            target: 1
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 5,
-  //        x: 300,
-  //        y: 150,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 10,
-  //            height: 10,
-  //            target: 9
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 6,
-  //        x: 0,
-  //        y: 300,
-  //        width: 100,
-  //        height: 100,
-  //        links: []
-  //      },
-  //      {
-  //        id: 7,
-  //        x: 150,
-  //        y: 300,
-  //        width: 100,
-  //        height: 100,
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 40,
-  //            height: 40,
-  //            target: 1
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        id: 8,
-  //        x: 300,
-  //        y: 300,
-  //        width: 100,
-  //        height: 100
-  //      },
-  //      {
-  //        id: 9,
-  //        x: 0,
-  //        y: 450,
-  //        width: 100,
-  //        height: 100,
-  //        lineColor: '#00F',
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 10,
-  //            height: 10,
-  //            target: 5
-  //          }
-  //        ]
-  //      },
-  //      {
-  //        name: 'longgggggggggggggggggggggggggggggggg',
-  //        id: 10,
-  //        x: 150,
-  //        y: 450,
-  //        width: 100,
-  //        height: 100
-  //      },
-  //      {
-  //        id: 11,
-  //        x: 300,
-  //        y: 450,
-  //        width: 100,
-  //        height: 100,
-  //        lineColor: '#0F0',
-  //        links: [
-  //          {
-  //            x: 30,
-  //            y: 30,
-  //            width: 20,
-  //            height: 20,
-  //            target: 3
-  //          }
-  //        ]
-  //      }
-  //    ];
+  var elements = [
+    {
+      id: 0,
+      x: 0,
+      y: 0,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 1
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 2
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 2
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 2
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 2
+        }
+      ]
+    },
+    {
+      id: 1,
+      x: 150,
+      y: 0,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 4
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 50,
+          target: 7
+        }
+      ]
+    },
+    {
+      id: 2,
+      x: 300,
+      y: 0,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 0
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 50,
+          target: 1
+        }
+      ]
+    },
+    {
+      id: 3,
+      x: 0,
+      y: 150,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 11
+        }
+      ]
+    },
+    {
+      id: 4,
+      x: 150,
+      y: 150,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 50,
+          y: 50,
+          width: 30,
+          height: 30,
+          target: 1
+        }
+      ]
+    },
+    {
+      id: 5,
+      x: 300,
+      y: 150,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 10,
+          height: 10,
+          target: 9
+        }
+      ]
+    },
+    {
+      id: 6,
+      x: 0,
+      y: 300,
+      width: 100,
+      height: 100,
+      links: []
+    },
+    {
+      id: 7,
+      x: 150,
+      y: 300,
+      width: 100,
+      height: 100,
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 40,
+          height: 40,
+          target: 1
+        }
+      ]
+    },
+    {
+      id: 8,
+      x: 300,
+      y: 300,
+      width: 100,
+      height: 100
+    },
+    {
+      id: 9,
+      x: 0,
+      y: 450,
+      width: 100,
+      height: 100,
+      lineColor: '#00F',
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 10,
+          height: 10,
+          target: 5
+        }
+      ]
+    },
+    {
+      name: 'longgggggggggggggggggggggggggggggggg',
+      id: 10,
+      x: 150,
+      y: 450,
+      width: 100,
+      height: 100
+    },
+    {
+      id: 11,
+      x: 300,
+      y: 450,
+      width: 100,
+      height: 100,
+      lineColor: '#0F0',
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 3
+        }
+      ]
+    }
+  ];
   var linkMap = new LinkMap({
     context: context,
     channelWidth: 50,
@@ -258,7 +258,7 @@
     fontSize: 14
   });
 
-  var elements = [
+  var elements2 = [
     {
       id: 0,
       x: 0,
@@ -360,7 +360,36 @@
       y: 150,
       width: 100,
       height: 100,
-      links: []
+      links: [
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 5
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 5
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 5
+        },
+        {
+          x: 30,
+          y: 30,
+          width: 20,
+          height: 20,
+          target: 5
+        },
+      ]
     },
     {
       id: 4,
