--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,13 @@
           width: 20,
           height: 20,
           target: 11
+        },
+        {
+          x: 40,
+          y: 40,
+          width: 30,
+          height: 10,
+          target: 3
         }
       ]
     },
@@ -201,7 +208,37 @@
       x: 300,
       y: 300,
       width: 100,
-      height: 100
+      height: 100,
+      links: [
+        {
+          x: 10,
+          y: 30,
+          width: 10,
+          height: 10,
+          target: 8
+        },
+        {
+          x: 70,
+          y: 30,
+          width: 10,
+          height: 10,
+          target: 8
+        },
+        {
+          x: 10,
+          y: 70,
+          width: 10,
+          height: 10,
+          target: 8
+        },
+        {
+          x: 70,
+          y: 70,
+          width: 10,
+          height: 10,
+          target: 8
+        }
+      ]
     },
     {
       id: 9,
@@ -468,7 +505,8 @@
     lineColor: '#333',
     fontSize: 14,
     canvasWidth: 600,
-    canvasHeight: 600
+    canvasHeight: 600,
+    debug: true
   });
   linkMap.draw(elements);
   console.log('draw finish.');
